# ai-engineer-singapore-2026-real-agent-workshop

./: .gitignore  README.md  docker-compose.yml
agent/: .env.example  README.md  langgraph.json  pyproject.toml
agent/specs/: reindex-bench-book.md
agent/src/agent/: __init__.py  graph.py  instrumentation.py
index/: .env.example  README.md  index.py  pyproject.toml  requirements.txt
scripts/: reindex.py  run_experiment.py  smoke_test.py
scripts/ralph/: prd.json
skills/setup/: SKILL.md  setup.sh
ui/: .env.local  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/app/: assistant.tsx  globals.css  page.tsx
ui/app/api/[..._path]/: route.ts
ui/components/assistant-ui/: thread-list.tsx  thread.tsx
ui/lib/: chatApi.ts
