[project]
name = "index-pipeline"
version = "0.1.0"
description = "Parameterized index pipeline for self-improving RAG"
requires-python = ">=3.13"
dependencies = [
    "llama-cloud>=0.6.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "opensearch-py>=2.4.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.0", "ruff>=0.6.0"]

[tool.uv]
package = false

[tool.ruff]
lint.select = [
    "E",
    "F",
    "I",
    "D",
    "D401",
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
plugins = []

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "ruff>=0.8.2",
]
